--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "K-StoryLab",
-    "short_name": "K-StoryLab",
+    "name": "AI-KOREA STORY",
+    "short_name": "AI-KOREA STORY",
     "description": "Learn Korean through stories and AI magic.",
     "start_url": "/",
     "display": "standalone",
